2008-04-07  Sverker Nilsson  <sverker@sverker-laptop>

	* specs/index.gsl: Added commentary in download section
	referringing to svn as source of latest changes esp. 64 bit.
	

	* Added specs/genguppydoc.py, to be able to regenerate docs from
	svn'd files.

2008-04-05  Sverker Nilsson  <sverker@sverker-laptop>

	* guppy/heapy/test/test_Classifiers.py (SpecialCases): 
	Relaxed the timing test in test_alt_retclaset with a factor 2
	from 2 to 4.
	
	* guppy/heapy/test/test_heapyc.py (TestHeapView):
	in test_timing:
	it failed in python2.3 64 bit, I removed the check for now,
	may check into this later...

	* src/sets/bitset.c (bits_first): Removed xxx etc from comment, no 
	problem with being hardcoded for size and now tested with 64 bits.
	(sf_realloc): changed the update of v->lo and v->hi to use better
	defined pointer-arithmetic within allocated arrays. This solved a
	problem with 64 bit mode in (at least) Python 2.4. May be a
	coincidence that it seemed to work with 2.5.

2008-03-17  Sverker Nilsson  <sverker@sverker-laptop>

	* Several files, to make it complie without warnings in 32 bit
	  mode. 
	  NyBit is now defined as Py_intptr_t and limits are calculated
	  a'la pyport.h .

	* src/sets/bitset.h: using __LP64__ macro to indirectly define internal
	  conditional flags, NyBits_32 resp. NyBits_64
	
	*  guppy/heapy/__init__.py : checked sys.maxint to detmine arch
	   some size-dependent tests are relaxed if not 32-bit arch
	*  guppy/heapy/test_heapyc.py : relaxed a timing test
	
	* src/sets/nodeset.c &c. changed some more occurences of int to NyBit
	  or perhaps they just became long in some place.

2008-03-13  Sverker Nilsson  <sverker@sverker-laptop>
	*  Starting modifications to work with 64 bits.
	*  guppy/src/sets/ (bitset.h, nodeset.c, bitset.c), maybe others,
	changes to especially the index type used as bit number in bitsets.
	Defining type NyBit for this and also NySize. They are just
	longs right now. Testing with Ubuntu 7.10 / AMD 64. 
